--- a/index.html
+++ b/index.html
@@ -7,11 +7,139 @@
     </head>
     <body>
         <main>
-            <button id="button_0" class="button_page button_now_page" onclick="changePage(0)">輸入</button>
-            <button id="button_1" class="button_page" onclick="changePage(1)">生成</button>
+            <button id="button_0" class="button_page button_now_page" onclick="inputClass()">輸入</button>
+            <button id="button_1" class="button_page" onclick="generation()">生成</button>
 
             <div class="page">
+                <div style="display: block;" id="page_0" class="subPage">
 
+                </div>
+                <div style="display: none;" id="page_1" class="subPage">
+                    <table>
+                        <tr>
+                            <th colspan="8">課程時間表</th>
+                        </tr>
+                        <tr>
+                            <td class="block_time_top">時間</td>
+                            <td class="block_class_top">星期一</td>
+                            <td class="block_class_top">星期二</td>
+                            <td class="block_class_top">星期三</td>
+                            <td class="block_class_top">星期四</td>
+                            <td class="block_class_top">星期五</td>
+                            <td class="block_class_top">星期六</td>
+                            <td class="block_class_top">星期日</td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_time" rowspan="12">8:00~9:00</td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                        <tr class="context_time">
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                            <td class="block_class"></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </main>
 
